force-app/main/default/objects/Bundle_Item__c/Bundle_Item__c.object-meta.xml
<CustomObject>
    <label>Bundle Item</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>Bundle Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>