force-app/main/default/objects/Bundle_Item__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <type>Lookup</type>
    <referenceTo>Service_Bundle__c</referenceTo>
    <relationshipLabel>Bundle Items</relationshipLabel>
    <relationshipName>Bundle_Items</relationshipName>
</CustomField>