force-app/main/default/objects/Bundle_Item__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <label>Default Quantity</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>